4.0/_sources/hydpytools.rst.txt
.. |Auxfiler| replace:: :class:`~hydpy.core.auxfiletools.Auxfiler`
.. |ConditionManager| replace:: :class:`~hydpy.core.filetools.ConditionManager`
.. |ControlManager| replace:: :class:`~hydpy.core.filetools.ControlManager`
.. |Elements.prepare_models| replace:: :func:`~hydpy.core.devicetools.Elements.prepare_models`
.. |Elements| replace:: :class:`~hydpy.core.devicetools.Elements`
.. |Element| replace:: :class:`~hydpy.core.devicetools.Element`
.. |False| replace:: :const:`False`
.. |FileManager.currentdir| replace:: :const:`~hydpy.core.filetools.FileManager.currentdir`
.. |FluxSequence| replace:: :class:`~hydpy.core.sequencetools.FluxSequence`
.. |HydPy.conditions| replace:: :const:`~hydpy.core.hydpytools.HydPy.conditions`
.. |HydPy.elements| replace:: :const:`~hydpy.core.hydpytools.HydPy.elements`
.. |HydPy.endnodes| replace:: :const:`~hydpy.core.hydpytools.HydPy.endnodes`
.. |HydPy.load_allseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_allseries`
.. |HydPy.load_conditions| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_conditions`
.. |HydPy.load_fluxseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_fluxseries`
.. |HydPy.load_inputseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_inputseries`
.. |HydPy.load_modelseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_modelseries`
.. |HydPy.load_obsseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_obsseries`
.. |HydPy.load_simseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_simseries`
.. |HydPy.load_stateseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_stateseries`
.. |HydPy.methodorder| replace:: :const:`~hydpy.core.hydpytools.HydPy.methodorder`
.. |HydPy.nodes| replace:: :const:`~hydpy.core.hydpytools.HydPy.nodes`
.. |HydPy.prepare_allseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_allseries`
.. |HydPy.prepare_everything| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_everything`
.. |HydPy.prepare_inputseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_inputseries`
.. |HydPy.prepare_models| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_models`
.. |HydPy.prepare_network| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_network`
.. |HydPy.prepare_simseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_simseries`
.. |HydPy.print_networkproperties| replace:: :func:`~hydpy.core.hydpytools.HydPy.print_networkproperties`
.. |HydPy.reset_conditions| replace:: :func:`~hydpy.core.hydpytools.HydPy.reset_conditions`
.. |HydPy.save_allseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.save_allseries`
.. |HydPy.save_conditions| replace:: :func:`~hydpy.core.hydpytools.HydPy.save_conditions`
.. |HydPy.save_controls| replace:: :func:`~hydpy.core.hydpytools.HydPy.save_controls`
.. |HydPy.save_modelseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.save_modelseries`
.. |HydPy.segregatednetworks| replace:: :const:`~hydpy.core.hydpytools.HydPy.segregatednetworks`
.. |HydPy.simulate| replace:: :func:`~hydpy.core.hydpytools.HydPy.simulate`
.. |HydPy.trim_conditions| replace:: :func:`~hydpy.core.hydpytools.HydPy.trim_conditions`
.. |HydPy.update_devices| replace:: :func:`~hydpy.core.hydpytools.HydPy.update_devices`
.. |HydPy| replace:: :class:`~hydpy.core.hydpytools.HydPy`
.. |IOSequence.series| replace:: :const:`~hydpy.core.sequencetools.IOSequence.series`
.. |IOSequences.open_files| replace:: :func:`~hydpy.core.sequencetools.IOSequences.open_files`
.. |IOSequence| replace:: :class:`~hydpy.core.sequencetools.IOSequence`
.. |InfoArray| replace:: :class:`~hydpy.core.sequencetools.InfoArray`
.. |InputSequence| replace:: :class:`~hydpy.core.sequencetools.InputSequence`
.. |LogSequence| replace:: :class:`~hydpy.core.sequencetools.LogSequence`
.. |ModelIOSequences.load_data| replace:: :func:`~hydpy.core.sequencetools.ModelIOSequences.load_data`
.. |ModelSequence| replace:: :class:`~hydpy.core.sequencetools.ModelSequence`
.. |Model| replace:: :class:`~hydpy.core.modeltools.Model`
.. |NetworkManager| replace:: :class:`~hydpy.core.filetools.NetworkManager`
.. |Node.deploymode| replace:: :const:`~hydpy.core.devicetools.Node.deploymode`
.. |Node.variable| replace:: :const:`~hydpy.core.devicetools.Node.variable`
.. |NodeSequence| replace:: :class:`~hydpy.core.sequencetools.NodeSequence`
.. |Nodes| replace:: :class:`~hydpy.core.devicetools.Nodes`
.. |Node| replace:: :class:`~hydpy.core.devicetools.Node`
.. |Obs| replace:: :class:`~hydpy.core.sequencetools.Obs`
.. |Options.checkseries| replace:: :const:`~hydpy.core.optiontools.Options.checkseries`
.. |Options.parameterstep| replace:: :const:`~hydpy.core.optiontools.Options.parameterstep`
.. |Options.warntrim| replace:: :const:`~hydpy.core.optiontools.Options.warntrim`
.. |Options| replace:: :class:`~hydpy.core.optiontools.Options`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |Selections| replace:: :class:`~hydpy.core.selectiontools.Selections`
.. |Selection| replace:: :class:`~hydpy.core.selectiontools.Selection`
.. |SequenceManager| replace:: :class:`~hydpy.core.filetools.SequenceManager`
.. |Sequence_| replace:: :class:`~hydpy.core.sequencetools.Sequence_`
.. |Sim| replace:: :class:`~hydpy.core.sequencetools.Sim`
.. |StateSequence| replace:: :class:`~hydpy.core.sequencetools.StateSequence`
.. |TestIO| replace:: :class:`~hydpy.core.testtools.TestIO`
.. |Timegrid.firstdate| replace:: :const:`~hydpy.core.timetools.Timegrid.firstdate`
.. |Timegrid.lastdate| replace:: :const:`~hydpy.core.timetools.Timegrid.lastdate`
.. |Timegrids| replace:: :class:`~hydpy.core.timetools.Timegrids`
.. |Timegrid| replace:: :class:`~hydpy.core.timetools.Timegrid`
.. |True| replace:: :const:`True`
.. |devicetools| replace:: :mod:`~hydpy.core.devicetools`
.. |hland_v1| replace:: :mod:`~hydpy.models.hland_v1`
.. |hland| replace:: :mod:`~hydpy.models.hland`
.. |hstream_v1| replace:: :mod:`~hydpy.models.hstream_v1`
.. |numpy| replace:: :mod:`~numpy`
.. |prepare_full_example_1| replace:: :func:`~hydpy.examples.prepare_full_example_1`
.. |prepare_full_example_2| replace:: :func:`~hydpy.examples.prepare_full_example_2`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |sequencetools| replace:: :mod:`~hydpy.core.sequencetools`
.. |trim| replace:: :func:`~hydpy.core.variabletools.trim`
.. |hland_constants.FIELD| replace:: :const:`~hydpy.models.hland.hland_constants.FIELD`
.. |hland_constants.FOREST| replace:: :const:`~hydpy.models.hland.hland_constants.FOREST`
.. |hland_control.IcMax| replace:: :class:`~hydpy.models.hland.hland_control.IcMax`
.. |hland_control.PercMax| replace:: :class:`~hydpy.models.hland.hland_control.PercMax`
.. |hland_control.WHC| replace:: :class:`~hydpy.models.hland.hland_control.WHC`
.. |hland_control.ZoneType| replace:: :class:`~hydpy.models.hland.hland_control.ZoneType`
.. |hland_derived.RelLandArea| replace:: :class:`~hydpy.models.hland.hland_derived.RelLandArea`
.. |hland_fluxes.QT| replace:: :class:`~hydpy.models.hland.hland_fluxes.QT`
.. |hland_inputs.T| replace:: :class:`~hydpy.models.hland.hland_inputs.T`
.. |hland_states.Ic| replace:: :class:`~hydpy.models.hland.hland_states.Ic`
.. |hland_states.SM| replace:: :class:`~hydpy.models.hland.hland_states.SM`
.. |hland_states.SP| replace:: :class:`~hydpy.models.hland.hland_states.SP`
.. |hstream_control.Damp| replace:: :class:`~hydpy.models.hstream.hstream_control.Damp`
.. |hstream_control.Lag| replace:: :class:`~hydpy.models.hstream.hstream_control.Lag`
.. |numpy.nan| replace:: :const:`~numpy.nan`
.. |numpy.ndarray| replace:: :class:`~numpy.ndarray`

.. _hydpytools:

hydpytools
==========

.. automodule:: hydpy.core.hydpytools
    :members:
    :show-inheritance:
    :exclude-members: CLASSES, RUN_METHODS, ADD_METHODS, INLET_METHODS, OUTLET_METHODS, RECEIVER_METHODS, SENDER_METHODS, PART_ODE_METHODS, FULL_ODE_METHODS, CONTROLPARAMETERS, DERIVEDPARAMETERS, FIXEDPARAMETERS, REQUIREDSEQUENCES, UPDATEDSEQUENCES, RESULTSEQUENCES, SOLVERPARAMETERS, SOLVERSEQUENCES, SUBMETHODS, SUBMODELS, fastaccess, fastaccess_new, fastaccess_old, pars, seqs
